--- a/pom.xml
+++ b/pom.xml
@@ -135,12 +135,16 @@
       <artifactId>commons-io</artifactId>
       <version>2.6</version>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>mysql</groupId>-->
+<!--      <artifactId>mysql-connector-java</artifactId>-->
+<!--      <version>8.0.17</version>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.17</version>
-    </dependency>
-    <dependency>
+      <version>5.1.39</version>
+    </dependency>    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.11</version>
@@ -318,8 +322,15 @@
     <dependency>
       <groupId>org.jgroups</groupId>
       <artifactId>jgroups-raft</artifactId>
-      <version>1.0.0.Final</version>
+      <version>0.5.3.Final</version>
     </dependency>
+
+    <!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.jgroups/jgroups-raft &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>org.jgroups</groupId>-->
+<!--      <artifactId>jgroups-raft</artifactId>-->
+<!--      <version>1.0.0.Final</version>-->
+<!--    </dependency>-->
   </dependencies>
 
   <build>
